--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<h2>Best Quality Chocolate Powder</h2>
+							<p>You can never find this perfect balance between Quality and Affordability anywhere else</a></p>
 						</div>
 					</section>
 
