--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Best Quality Chocolate Powder</h2>
+							<h2>Best Quality Cocoa Powder</h2>
 							<p>You can never find this perfect balance between Quality and Affordability anywhere else</a></p>
 						</div>
 					</section>
@@ -57,8 +57,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Naturally Processed</h2>
+										<p>Our product is organically processed, from start to finished.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -69,8 +69,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">High Quality</h2>
+										<p>We keep a high standard on quality.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
