--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><img src="images/cl.png"></span></div>
 							<h2>Best Quality Chocolate Powder</h2>
 							<p>You can never find this perfect balance between Quality and Affordability anywhere else</a></p>
 						</div>
