--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Naturally Processed</h2>
-										<p>Our product is organically processed, from start to finished.</p>
+										<p>Our product is organically processed, from start to finish.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
