--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 							<ul class="contact">
 								<li class="icon solid fa-home">
 									Chocoid Inc<br />
-									Lubuk Sikaping, Pasaman Regency<br />
-									West Sumatra, Indonesia 25585
+									Aia Manggih, Lubuk Sikaping, Pasaman Regency<br />
+									West Sumatra, Indonesia 26318
 								</li>
-								<li class="icon solid fa-phone">+6282268443376</li>
-								<li class="icon solid fa-envelope"><a href="#">syarif@gmail.com</a></li>
+								<li class="icon solid fa-phone">+62 812-6766-0325</li>
+								<li class="icon solid fa-envelope"><a href="#">chocoid@gmail.com</a></li>
 								<li class="icon brands fa-twitter"><a href="#">twitter.com/chocoid</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/chocoid</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/chocoid</a></li>
