--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Kantor</a></li>
-								<li><a href="elements.html">Kontak kito</a></li>
+								<li><a href="generic.html">Headquarter</a></li>
+								<li><a href="elements.html">Offices</a></li>
 								<li><a href="#">Log In</a></li>
 								<li><a href="#">Sign Up</a></li>
 							</ul>
