--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><img src="images/cll.png"></span></div>
-							<h2>Best Quality Chocolate Powder</h2>
+							<h2>Best Quality Cocoa Powder</h2>
 							<p>You can never find this perfect balance between Quality and Affordability anywhere else</a></p>
 						</div>
 					</section>
@@ -110,7 +110,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3 class="major">Contact us</h3>
-											<p>Ask us anything!.</p>
+											<p>Ask us anything!</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
